@@ -27,6 +27,11 @@ public class CrossBow extends BaseWeapon implements ISpecificStatReq {
 
     }
 
+    @Override
+    public String resourceID() {
+        return "crossbow";
+    }
+
     static StatReq req = new StatReq(LvlPointStat.DEXTERITY, StatReq.Size.SMALL, LvlPointStat.STRENGTH, StatReq.Size.TINY);
 
     @Override
