@@ -3,6 +3,7 @@ package com.robertx22.mine_and_slash.database.items.runes;
 import com.robertx22.mine_and_slash.database.items.runes.base.BaseRuneItem;
 import com.robertx22.mine_and_slash.database.stats.StatMod;
 import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.LifeOnHitFlat;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.ManaOnHitFlat;
 import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.ManaRegenFlat;
 import net.minecraft.item.Item;
 
@@ -25,7 +26,7 @@ public class AnoItem extends BaseRuneItem {
 
     @Override
     public List<StatMod> weaponStat() {
-        return Arrays.asList(new LifeOnHitFlat());
+        return Arrays.asList(new LifeOnHitFlat(), new ManaOnHitFlat());
     }
 
     @Override
