@@ -1,47 +1,47 @@
 package com.robertx22.mine_and_slash.database.items.runes;
 
+import com.robertx22.mine_and_slash.database.items.runes.base.BaseRuneItem;
+import com.robertx22.mine_and_slash.database.stats.StatMod;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.DodgeRatingFlat;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.EnergyRegenFlat;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.percent.ArmorPercent;
+import net.minecraft.item.Item;
+
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-
-import com.robertx22.mine_and_slash.database.stats.StatMod;
-import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.EnergyRegenFlat;
-import com.robertx22.mine_and_slash.database.stats.stat_mods.percent.ArmorPercent;
-import com.robertx22.mine_and_slash.database.items.runes.base.BaseRuneItem;
-
-import net.minecraft.item.Item;
 
 public class GohItem extends BaseRuneItem {
     public static HashMap<Integer, Item> Items = new HashMap<Integer, Item>();
 
     public GohItem(int rarity) {
-	super(rarity);
+        super(rarity);
 
     }
 
     @Override
     public String name() {
-	return "GOH";
+        return "GOH";
     }
 
     @Override
     public List<StatMod> weaponStat() {
-	return Arrays.asList(new EnergyRegenFlat());
+        return Arrays.asList(new EnergyRegenFlat());
     }
 
     @Override
     public List<StatMod> armorStat() {
-	return Arrays.asList(new ArmorPercent());
+        return Arrays.asList(new ArmorPercent(), new DodgeRatingFlat());
     }
 
     @Override
     public List<StatMod> jewerlyStat() {
-	return this.spellDamagePercents();
+        return this.spellDamagePercents();
     }
 
     @Override
     public BaseRuneItem byRarity(int rar) {
-	return (BaseRuneItem) Items.get(rar);
+        return (BaseRuneItem) Items.get(rar);
     }
 
 }
