@@ -1,5 +1,7 @@
 package com.robertx22.mine_and_slash.database.items.unique_items.chest;
 
+import com.robertx22.mine_and_slash.database.gearitemslots.bases.GearItemSlot;
+import com.robertx22.mine_and_slash.database.gearitemslots.leather.LeatherChest;
 import com.robertx22.mine_and_slash.database.items.unique_items.StatReq;
 import com.robertx22.mine_and_slash.database.items.unique_items.bases.BaseUniqueChest;
 import com.robertx22.mine_and_slash.database.stats.StatMod;
@@ -32,6 +34,11 @@ public class ChestDodge extends BaseUniqueChest {
     public int Tier() {
         return 14;
 
+    }
+
+    @Override
+    public GearItemSlot getGearSlot() {
+        return LeatherChest.INSTANCE;
     }
 
     @Override
