@@ -25,3 +25,6 @@ mana and mana regen now scales to lvl. This is in preparation for cool stuff lik
 mana costs scale based on player lvl, not item/spell lvl. This might sound weird but otherwise you could spam your lvl 1 spell that uses % of your spell dmg and never run out of mana.
 good news is this is another stat that scales to lvl, meaning finding new higher lvl gear will be much more rewarding!
 made mobs a tiny bit stronger cus players now have 125 talent points at max lvl.
+as talents introduced a lot more stats, stat requirements now scale harder a bit
+runes now have magic shield and dodge as chance for their stats
+added 2 new runewords for magic shield users
